# CMake_Workshop

./: CMakeLists.txt  README.md  main.cpp
CMakeLists/ejemplo1/: CMakeLists.txt  main.cpp
CMakeLists/ejemplo2/: CMakeLists.txt
CMakeLists/ejemplo2/include/: hello.hpp
CMakeLists/ejemplo2/src/: main.cpp
CMakeLists/ejemplo3/: CMakeLists.txt  build.bat
CMakeLists/ejemplo3/src/: main.cpp
ejemplo2/: CMakeLists.txt
ejemplo2/include/: hello.hpp
ejemplo2/src/: main.cpp
ejemplo3/: CMakeLists.txt  build.bat
ejemplo3/src/: main.cpp
ejemplo4/include/: fonts.h
ejemplo4/include/class/: Cliente.h
ejemplo4/include/pagos/: HacerPagoFrame.h
ejemplo4/include/prestamos/: AgregarPrestamo.h
ejemplo4/src/class/: Cliente.cpp
ejemplo4/src/clientes/: ClientesFrame.cpp
ejemplo4/src/pagos/: HacerPagoFrame.cpp
ejemplo5/src/: CMakeLists.txt
ejemplo5/ui/: MainFrame.cpp  MainFrame.h
ejemplo5/utils/: Helper.cpp  Helper.h
ejemplo6/include/clientes/: AgregarClienteFrame.h  ClientesFrame.h
ejemplo6/src/: ExamenFinalV2App.cpp
ejemplo6/src/class/: Modelo.cpp
ejemplo6/src/prestamos/: DetallesPrestamoFrame.cpp
wxWidget_CMakeLists/ejemplo1/: CMakeLists.txt
wxWidget_CMakeLists/ejemplo1/include/: ExamenFinalV2Main.h  colors.h
wxWidget_CMakeLists/ejemplo1/include/class/: Modelo.h  Prestamo.h
wxWidget_CMakeLists/ejemplo1/include/prestamos/: AgregarPrestamoFrame.h
wxWidget_CMakeLists/ejemplo1/src/: ExamenFinalV2Main.cpp
wxWidget_CMakeLists/ejemplo1/src/class/: Prestamo.cpp
wxWidget_CMakeLists/ejemplo1/src/prestamos/: AgregarPrestamoFrame.cpp
wxWidget_CMakeLists/ejemplo2/: CMakeLists.txt
wxWidget_CMakeLists/ejemplo2/src/: CMakeLists.txt  MainApp.cpp
wxWidget_CMakeLists/ejemplo2/ui/: CMakeLists.txt  MainFrame.cpp
wxWidget_CMakeLists/ejemplo2/utils/: CMakeLists.txt
wxWidget_CMakeLists/ejemplo3/: CMakeLists.txt
wxWidget_CMakeLists/ejemplo3/include/: ExamenFinalV2App.h
wxWidget_CMakeLists/ejemplo3/include/class/: Fecha.h  Pago.h
wxWidget_CMakeLists/ejemplo3/include/prestamos/: DetallesPrestamoFrame.h  PrestamosFrame.h
wxWidget_CMakeLists/ejemplo3/src/class/: Fecha.cpp  Pago.cpp
wxWidget_CMakeLists/ejemplo3/src/clientes/: AgregarClienteFrame.cpp
wxWidget_CMakeLists/ejemplo3/src/prestamos/: PrestamosFrame.cpp
